--- a/views/film.phtml
+++ b/views/film.phtml
@@ -1,5 +1,5 @@
 <?php /* @var $films \Application\Collection\FilmCollection */ ?>
-<h1>Films</h1>
+<h1>Films de la base de données</h1>
 <ul>
     <?php foreach ($films as $film) : /* @var $film \Application\Entity\Film */ ?>
     <li><a href="film/<?= urlencode($film->name()) ?>"><?= $film->name() ?></a></li>
