--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
     </head>
     <body>
+    	<h1>le container</h1>
         <div class="container">
-            <?= $content ?>
+            <?=  $content ?>
         </div>
     </body>
 </html>
